Fix table horizontal scroll

--- a/src/table/table.component.scss
+++ b/src/table/table.component.scss
@@ -5,6 +5,8 @@
 }
 
 table {
+	display: inline-grid;
+	overflow-x: scroll;
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
@@ -14,7 +16,7 @@ table {
 	tbody {
 		display: block;
 		width: 100%;
-		overflow: scroll;
+		overflow-y: scroll;
 
 		&.striped {
 			tr {
@@ -36,6 +38,7 @@ table {
 	thead {
 		display: table;
 		width: 100%;
+
 		th {
 			text-align: left;
 			padding-left: 20px;
